Mejoras de codigo siguiendo SonarCube (quedan errores en el flujo del editor de cursos)